# compression_project

./: README.md  benchmark.sh  docker-compose.yml  usage.md
.github/workflows/: docker.yml
js-compressor/: Dockerfile  file-type.js  index.js  lz.js  package-lock.json  package.json  rle.js
js-compressor/test/: file-type.test.js  lz.test.js  rle.test.js
notes/: docker.md  github_actions.md  lz77_compression.md  nodejs_cli.md  run_length_encoding.md
rust-compressor/: Cargo.toml  Dockerfile  input.txt  output.txt
rust-compressor/benches/: compression_benchmark.rs
rust-compressor/src/: file_type.rs  lib.rs  lz77.rs  main.rs  rle.rs
