[package]
authors = ["Micheal Ndoh  michaelndoh9@gmail.com"]
description = "Rust implementation of RLE and LZ77 compression algorithms"
edition = "2021"
name = "rust-compressor"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
clap = {version = "4.4", features = ["derive"]}
glob = "0.3"
thiserror = "2.0.12"
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = 'abort'
strip = true
